--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+api.security.token.secret=${JWT_SECRET:12345678}
+
 #spring.sql.init.mode=always
